[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Components/FightWave/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Components/FightWave/MobPool.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.118275, 0.189159, 0, 0, 0, 0, 1024, 0.0129895, 0, 0, 0, 0, 1023.97, 600.014, 0, 0, 0, 0, -0.0419407, 600.04, 0, 0, 0, 0, 0.118275, 0.189159 )
}

[node name="Mob_Pool" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 1 )

[node name="NewWave" type="Timer" parent="."]
autostart = true

[node name="WavePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="WaveSpawn" type="PathFollow2D" parent="WavePath"]
position = Vector2( 0.118275, 0.189159 )
rotation = -0.000172073
[connection signal="timeout" from="NewWave" to="." method="_on_NewWave_timeout"]
